--- a/admin-dashboard/.env
+++ b/admin-dashboard/.env
@@ -1,2 +1,3 @@
 VITE_API_URL=http://localhost:8000
 VITE_GOOGLE_MAPS_API_KEY=AIzaSyDwvOxSoSPw6KMrY1kNF_MNkfxIN6WGBH0
+VITE_GOOGLE_MAPS_MAP_ID=8cca8aadafb2d8b6b7ec3ee4 
